fix: improve code for align dropdown and reduce vertical spacing

--- a/decidim-budgets/app/packs/stylesheets/budgets.scss
+++ b/decidim-budgets/app/packs/stylesheets/budgets.scss
@@ -69,7 +69,7 @@
     }
   }
 
-  &__projects {
+  &__projects__container {
     @apply -mt-12 sm:mt-0;
   }
 
